// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should render correctly in dark 1`] = `
<TextInput
  accessible={true}
  multiline={false}
  onChangeText={[MockFunction]}
  style={
    {
      "borderColor": "white",
      "borderRadius": 10,
      "borderWidth": 1,
      "color": "white",
      "fontFamily": "SFProText-Regular",
      "height": 48,
      "padding": 10,
      "textAlignVertical": "top",
      "width": "100%",
    }
  }
  testID="TextInput"
  value="Text"
/>
`;

exports[`TextInput should render correctly in dark with multiline 1`] = `
<TextInput
  accessible={true}
  multiline={true}
  numberOfLines={4}
  onChangeText={[MockFunction]}
  style={
    {
      "borderColor": "black",
      "borderRadius": 10,
      "borderWidth": 1,
      "color": "black",
      "fontFamily": "SFProText-Regular",
      "height": 100,
      "padding": 10,
      "textAlignVertical": "top",
      "width": "100%",
    }
  }
  testID="TextInput"
  value="Text"
/>
`;

exports[`TextInput should render correctly in light 1`] = `
<TextInput
  accessible={true}
  multiline={false}
  onChangeText={[MockFunction]}
  style={
    {
      "borderColor": "white",
      "borderRadius": 10,
      "borderWidth": 1,
      "color": "white",
      "fontFamily": "SFProText-Regular",
      "height": 48,
      "padding": 10,
      "textAlignVertical": "top",
      "width": "100%",
    }
  }
  testID="TextInput"
  value="Text"
/>
`;

exports[`TextInput should render correctly in light with multiline 1`] = `
<TextInput
  accessible={true}
  multiline={true}
  numberOfLines={4}
  onChangeText={[MockFunction]}
  style={
    {
      "borderColor": "black",
      "borderRadius": 10,
      "borderWidth": 1,
      "color": "black",
      "fontFamily": "SFProText-Regular",
      "height": 100,
      "padding": 10,
      "textAlignVertical": "top",
      "width": "100%",
    }
  }
  testID="TextInput"
  value="Text"
/>
`;
